<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="selectDirLabel">working directory</string>
    <string name="selectChartDirLabel">additional charts directory</string>
    <string name="enableDemoLabel">show demo charts</string>
    <string name="noLocation">No GPS found, enable now?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="selectWorkDirWritable">Your old workdir ist not writable/does not exist, select a new one</string>
    <string name="requiredSettings">You miss some required settings</string>
    <string name="selectChartDir">select additional chart dir</string>
    <string name="internalStorage">Internal Storage</string>
    <string name="externalStorage">External Storage</string>
    <string name="newFolderName">name for new folder</string>
    <string name="createFolder">create folder</string>
    <string name="noGpsSelected">no Location permissions granted</string>
    <string name="action_about">about</string>
    <string name="notifyTitle">AvNav</string>
    <string name="notifyText">AvNav running</string>
    <string name="btShowInfo">Info/Licenses</string>
    <string name="btShowPrivacy">PrivacyInfo</string>
    <string name="selectApp">Select Application to handle</string>
    <string name="uploadRoute">Select a route to upload</string>
    <string name="uploadChart">Select a chart to upload</string>
    <string name="uploadImage">Select an image to upload</string>
    <string name="uploadUser">Select a file to upload</string>
    <string name="uploadLayout">Select a layout to upload</string>
    <string name="uploadOverlay">Select a file to upload</string>
    <string name="uploadTrack">Select a track to upload</string>
    <string name="installFileManager">Please install a file manager</string>
    <string name="androidSettings">Android Settings</string>
    <string name="labelSettingsIpAddress">IP Address to connect. Can also be a hostname
    or a mnds name like avnav.local</string>
    <string name="labelSettingsIpPort">IP Port to connect</string>
    <string name="labelSettingsActivity">Android Settings</string>
    <string name="labelSettingsMain">Main Settings</string>
    <string name="labelSettingsSound">Sound Settings</string>
    <string name="labelSettingsTrackInterval">write the track file every(s)</string>
    <string name="labelSettingsTrackMinDist">min trackpoint distance(m)</string>
    <string name="labelSettingsTrackMinTime">min time between track points(s)</string>
    <string name="labelSettingsTrackLength">track length(h)</string>
    <string name="labelSettingsDefaults">reset to defaults</string>
    <string name="labelSettingsAisLifetime">AIS info invalid after (s)</string>
    <string name="labelSettingsPosAge">NMEA position, wind, depth invalid after(s)</string>
    <string name="labelSettingsAuxAge">NMEA non position invalid after(s)</string>
    <string name="labelSettingsOwnMMSI">filter own MMSI</string>
    <string name="labelSettingsEnabled">enable this channel</string>
    <string name="labelSettingsSource">name for this channel</string>
    <string name="labelSettingsBaud">serial baudrate</string>
    <string name="labelSettingsTimeOffset">time offset(s)</string>
    <string name="btSettingsAudioMedia">Media</string>
    <string name="btSettingsAudioRingtone">Ringtone</string>
    <string name="somethingWrong">Startup Error</string>
    <string name="somethingWrongMessage">Something went wrong during the last start. Please change your settings and try again.</string>
    <string name="firstStart">Initial Settings</string>
    <string name="firstStartMessage">You are starting for the first time. Please choose some initial settings. Later you can go to the settings screen via the settings page, android button.</string>
    <string name="endApplication">Really exit AvNav?</string>
    <string name="labelSettingsNmeaFilter">an NMEA filter, use e.g. $RMC or ^$RMC, !AIVDM</string>
    <string name="labelSettingsNmeaOutFilter">an NMEA filter for outgoing data, use e.g. $RMC or ^$RMC, !AIVDM</string>
    <string name="labelSettingsSendData">send out NMEA on this connection</string>
    <string name="labelSettingsBtDevice">select the bluetooth device</string>
    <string name="labelSettingsUsbDevice">select the USB device</string>
    <string name="setDefault">Default</string>
    <string name="newVersionTitle">New App Version</string>
    <string name="newVersionMessage">This version will always directly start into the application.
        You can reach the settings via the status page and via the android button there.
    </string>
    <string name="loading">AvNav is loading...</string>
    <string name="labelSettingsServerPort">port for WebServer</string>
    <string name="labelSettingsAnchorAlarm">Sound for anchor alarm</string>
    <string name="labelSettingsGpsAlarm">Sound for gps alarm</string>
    <string name="labelSettingsWpAlarm">Sound for waypoint alarm</string>
    <string name="reset">Reset</string>
    <string name="enableExternalAccess">allow WebServer External Access</string>
    <string name="alarmSounds">Alarm sounds</string>
    <string name="select">Select</string>
    <string name="channel_name">Information</string>
    <string name="channel_description">All app notifications</string>
    <string name="importRouteTitle">Avnav Import Route</string>
    <string name="importRouteText">Import Route?</string>
    <string name="receiveMustStart">you must start avnav first to receive data</string>
    <string name="receiveOnlyGpx">can only receive .gpx files</string>
    <string name="receiveNoValidRoute">This file is no valid route, no rte tag</string>
    <string name="receiveUnableToRead">unable to read route file</string>
    <string name="receiveUnableToImport">unable to import</string>
    <string name="importFailed">import failed</string>
    <string name="receiveAlreadyExists">Route already exists</string>
    <string name="labelSettingsMobAlarm">Sound for MOB alarm</string>
    <string name="hideBars">Hide System Bars</string>
    <string name="background">Background</string>
    <string name="labelSettingsConnectTimeout">Timeout(s) for connecting to remote server use 0 for none</string>
    <string name="labelSettingsReadTimeout">Change status to inactive if no data for this time (s), use 0 for none</string>
    <string name="labelSettingsWriteTimeout">timeout (s) for sending data to the remote server, use 0 for none</string>
    <string name="labelSettingsCloseOnTimeout">close and reopen the connection when a read timeout occurs</string>
    <string name="labelSettingsBindPort">local port the connection will listen on</string>
    <string name="labelSettingsExternalAccess">allow external systems to connect to this port (use with caution!)</string>
    <string name="labelSettingsPluginTimeout">time (s) to consider a plugin being not available any more</string>
    <string name="labelSettingsReadData">also read data on this connection</string>
    <string name="labelSettingsBlacklist">a , separated list of source names that we do not send out on this connection</string>
    <string name="labelSettingsSendBroadcast">send data as broadcast</string>
    <string name="labelSettingsComputeRMB">compute RMB sentences if a waypoint or route is active</string>
    <string name="reallyResetHandlers">Really reset the main and handler configuration?</string>
    <string name="labelSettingsSelectService">Select the service you would like to connect to</string>
    <string name="labelSettingsMdnsName">Name for Mdns (Bonjour/Avahi) announcement</string>
    <string name="labelSettingsMdnsEnabled">Enable announcement via MDNS (Bonjour/Avahi)</string>
    <string name="labelSettingsFlowControl">flow control for the serial connection</string>
    <string name="noFileManager">unable to open a file manager</string>
    <string name="labelSettingsComputeAPB">compute APB sentences if a waypoint or route is active</string>
    <string name="powerSafer">You have power saving enabled on your device. This will turn off the GPS in background. Please consider turning this off to ensure location updates while the screen is off.</string>
    <string name="backgroundGpsDisabled">gps disabled by power saving</string>
    <string name="backgroundGpsEnabled">gps enabled</string>
    <string name="uploadSettings">Select a settings file to upload</string>
    <string name="labelSettingsConnAlarm">Sound for connectionLost alarm</string>
    <string name="labelSettingsRhumbLine">use rhumb lines (else: great circle)</string>
    <string name="labelSettingsNextWpMode">when to switch to next waypoint\nearly: xx seconds after wp alarm\n90: we are at +/-90° from wp course\nlate: old behavior</string>
    <string name="labelSettingsNextWpTime">seconds after approach to switch wp (5...100) in mode early</string>
    <string name="allowPlugins">allow unknown plugins</string>
    <string name="labelSettingsStripLeading">delete any leading characters before $ or ! in received lines</string>
    <string name="needsBluetooth">Bluetooth permissions</string>
    <string name="needsBluetoothCon">Bluetooth permissions</string>
    <string name="needGps">Location permissions</string>
    <string name="grantQuestion">are not enabled. \nEnable it at the application settings now?</string>
    <string name="notGranted">not granted</string>
    <string name="permissionNotification">Notification permissions</string>
    <string name="priority_for_this_source">priority for this source</string>
    <string name="file_upload">Select Browser</string>
    <string name="download_finished">"download finished"</string>
    <string name="download_error">"download error: "</string>
    <string name="nmeaAge">max age of NMEA data in the queue before it get\'s dropped (in ms)</string>
    <string name="download_interrupted">download interrupted</string>
    <string name="sendOwn">send out data that we received on this connection</string>
    <string name="handleUsb">autoconnect USB devices</string>
    <string name="missingGps">Running without location permissions</string>
    <string name="nfexit">Exit</string>
    <string name="nfalarm">Cancel Alarm</string>
    <string name="resetChartDir">reset external chart dir</string>
    <string name="batteryOptimization">Battery Optimization is active for AvNav.\nThis will prevent normal network traffic while in background.\nOK to disable it in the settings.</string>
    <string name="share">Share</string>
    <string name="wdChange">Changing the working directory will make all your current data invisible. But you can switch back any time later.</string>
    <string name="warning">Warning</string>
</resources>
