<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/labelSettingsMain">
    <ListPreference
        android:key="runmode"
        android:title="@string/runMode">
    </ListPreference>
    <de.wellenvogel.avnav.settings.ExternalDialogEditTextPreference
        android:key="workdir"
        android:title="@string/selectDirLabel">
    </de.wellenvogel.avnav.settings.ExternalDialogEditTextPreference>
    <de.wellenvogel.avnav.settings.ExternalDialogEditTextPreference
        android:key="chartdir"
        android:title="@string/selectChartDirLabel">
    </de.wellenvogel.avnav.settings.ExternalDialogEditTextPreference>
    <CheckBoxPreference
        android:key="showdemo"
        android:title="@string/enableDemoLabel">
    </CheckBoxPreference>
</PreferenceScreen>