<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2006 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Layout used as the dialog's content View for EditTextPreference. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:overScrollMode="ifContentScrolls">

    <LinearLayout
        android:id="@+id/selectaudio_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/AudioTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="SomeTitle"
            android:textAlignment="textStart"
            android:textAppearance="@style/DialogTitle" />

        <TextView android:id="@+id/value"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/DialogSecond"
            android:text="someValue"
            android:background="@drawable/edit_text_background" />


        <LinearLayout
            android:id="@+id/edpButtonContainerSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/AudioMedia"
                style="@style/FlatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btSettingsAudioMedia"
                android:visibility="visible" />
            <Space
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <Button
                android:id="@+id/AudioRingtone"
                style="@style/FlatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btSettingsAudioRingtone"
                android:visibility="visible" />
            <Space
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <Button
                android:id="@+id/AudioBt3"
                style="@style/FlatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setDefault"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edpButtonContainer"
            android:gravity="right"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/AudioPlay"
                    style="@style/FlatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btSettingsAudioPlay"
                    android:visibility="visible" />
                <Button
                    android:id="@+id/AudioStop"
                    style="@style/FlatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btSettingsAudioStop"
                    android:visibility="invisible" />
            </LinearLayout>
            <Button
                android:id="@+id/AudioBt2"
                style="@style/FlatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:visibility="visible" />

            <Button
                android:id="@+id/AudioBt1"
                style="@style/FlatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
